--- a/DoAnKhoaIT/DoAnKhoaIT/bin/DoAnKhoaIT.dll.config
+++ b/DoAnKhoaIT/DoAnKhoaIT/bin/DoAnKhoaIT.dll.config
@@ -73,7 +73,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="SGU" connectionString="data source=DESKTOP-MEMEU1K\THANHETN;initial catalog=DbKhoaCNTT;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="SGU" connectionString="data source=DESKTOP-34L6DFD\GOKU;initial catalog=DbKhoaCNTT;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
